feat : chat 관련 entity 생성