@@ -7,6 +7,7 @@ import com.ssafy.homer.user.jwt.JwtUtil;
 import com.ssafy.homer.user.repository.UserRepository;
 import com.ssafy.homer.user.service.UserDetailServiceImpl;
 
+import java.util.Arrays;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 
@@ -55,8 +56,8 @@ public class SecurityConfig{
             @Override
             public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
                 CorsConfiguration config = new CorsConfiguration();
-                config.setAllowedOriginPatterns(List.of("*"));
-                config.setAllowedMethods(List.of("GET","POST", "PUT", "DELETE", "OPTIONS"));
+                config.setAllowedOriginPatterns(Arrays.asList("*"));
+                config.setAllowedMethods(Arrays.asList("GET","POST", "PUT", "DELETE", "OPTIONS"));
                 config.setAllowCredentials(true);
                 config.setAllowedHeaders(Collections.singletonList("*"));
                 config.setMaxAge(3600L); //1시간
